@@ -524,12 +524,12 @@
         workaround in the Dec. 9 version. The procedure is:</li>
         <ul>
         <li>If necessary, upgrade to the 3-7-0beta14 package or higher</li>
-          <li>If RotationAndFlip to -7 if it 5, or -5 if it is 7.&nbsp; Leave 
+          <li>Set RotationAndFlip to -7 if it 5, or -5 if it is 7.&nbsp; Leave 
             DMRotationAndFlip at 5 or 7, respectively</li>
-          <li>When a fixed version of DM is installed, you will need to remove the minus 
-            sign from the RotationAndFlip entry, change DMRotationAndFlip to match it, and 
-            change the configuration in DM , if necessary, to 90 to 270 degrees for a 7 or 
-            270 to 90 for a 5.</li> 
+          <li>When a fixed version of DM is installed, you will need to remove the minus sign 
+              from the RotationAndFlip entry, change DMRotationAndFlip to match it, and change 
+              the configuration in DM , if necessary, from 90 to 270 degrees for a 7 or 
+              from 270 to 90 for a 5.</li> 
         </ul>
       <li>Linear mode images during continuous acquisition have an incorrect offset 
         which would give a misleading dose rate estimate.&nbsp; This is currently 
